# machi

./: .gitignore  Cargo.toml  README.md
machi/: Cargo.toml
machi-bot/: Cargo.toml  README.md
machi-bot/src/: bus.rs  channel.rs  error.rs  events.rs  gateway.rs  lib.rs  main.rs  util.rs
machi-bot/src/agent/: confirmation.rs  context.rs  loop_runner.rs  mod.rs
machi-bot/src/channels/: cli.rs  mod.rs  telegram.rs
machi-bot/src/config/: mod.rs  schema.rs
machi-bot/src/cron/: job.rs  mod.rs  scheduler.rs  storage.rs
machi-bot/src/heartbeat/: mod.rs
machi-bot/src/session/: manager.rs  mod.rs  storage.rs
machi-bot/src/skills/: loader.rs  mod.rs  registry.rs
machi-bot/src/transcription/: groq.rs  mod.rs  provider.rs
machi-cli/: Cargo.toml
machi-cli/src/: chatbot.rs  lib.rs  main.rs
machi-integrations/: Cargo.toml
machi-integrations/src/: discord.rs  lib.rs
machi/examples/: agent_audio.rs  agent_basic.rs  agent_buildin_tools.rs  agent_confirmation.rs  agent_detailed.rs  agent_ollama_basic.rs  agent_ollama_callback.rs  agent_ollama_guardrail.rs  agent_ollama_multi.rs  agent_ollama_policy.rs  agent_ollama_streaming.rs  agent_ollama_tracing.rs  agent_openai_basic.rs  agent_openai_callback.rs  agent_openai_derive.rs  agent_openai_guardrail.rs  agent_openai_multi.rs  agent_openai_policy.rs  agent_openai_streaming.rs  agent_openai_structured.rs  agent_openai_tools.rs  agent_openai_tracing.rs  agent_openai_vision.rs  agent_run_result.rs  agent_simple.rs  agent_stream.rs  agent_streaming.rs  agent_telemetry.rs  agent_tools.rs  agent_vision.rs  agent_with_audio.rs  agent_with_buildin_tools.rs  agent_with_extractor.rs  agent_with_image.rs  agent_with_mcp_tools.rs  agent_with_pdf.rs  agent_with_rag.rs  agent_with_tools.rs  agent_with_tools_macro.rs  llm_ollama_embedding.rs  (+9 more)
machi/src/: a2a.rs  agent.rs  audio.rs  callback.rs  chat.rs  embedding.rs  error.rs  guardrail.rs  lib.rs  managed_agent.rs  mcp.rs  memory.rs  message.rs  model.rs  multimodal.rs  prelude.rs  stream.rs  telemetry.rs  tool.rs  usage.rs  wallet.rs
machi/src/agent/: builder.rs  completion.rs  config.rs  core.rs  error.rs  errors.rs  events.rs  executor.rs  hook.rs  managed.rs  mod.rs  result.rs  runner.rs  streaming.rs  tool_processor.rs
machi/src/backend/: mod.rs  rig.rs
machi/src/callback/: async_registry.rs  builtins.rs  context.rs  handlers.rs  hooks.rs  logging.rs  mod.rs  noop.rs  registry.rs
machi/src/chain/: ethereum.rs  mod.rs
machi/src/client/: audio_generation.rs  auth.rs  builder.rs  completion.rs  core.rs  embeddings.rs  error.rs  errors.rs  image_generation.rs  mod.rs  response.rs  traits.rs  transcription.rs  verify.rs
machi/src/completion/: error.rs  errors.rs  message.rs  mod.rs  request.rs  streaming.rs  traits.rs
machi/src/core/: error.rs  errors.rs  json_utils.rs  mod.rs  one_or_many.rs  wasm_compat.rs
machi/src/embedding/: builder.rs  distance.rs  embed.rs  embedding.rs  error.rs  errors.rs  mod.rs  tool.rs  traits.rs
machi/src/extract/: errors.rs  mod.rs
machi/src/guardrail/: input.rs  mod.rs  output.rs
machi/src/http/: errors.rs  mod.rs  multipart.rs  retry.rs  sse.rs  traits.rs
machi/src/integration/: cli_chatbot.rs
machi/src/llms/: error.rs  mod.rs
machi/src/loader/: error.rs  file.rs  mod.rs  pdf.rs
machi/src/managed/: registry.rs  tool_wrapper.rs  types.rs
machi/src/managed_agent/: mod.rs  tool_wrapper.rs
machi/src/mcp/: client.rs  error.rs  mod.rs  tool.rs  transport.rs
machi/src/memory/: error.rs  in_memory.rs  mod.rs  session.rs  sqlite.rs  steps.rs  timing.rs  types.rs
machi/src/modalities/: mod.rs
machi/src/policy/: mod.rs
machi/src/prompts/: engine.rs  mod.rs  templates.rs
machi/src/providers/: common.rs  config.rs  mock.rs  mod.rs  streaming.rs  types.rs
machi/src/store/: builder.rs  errors.rs  in_memory_store.rs  lsh.rs  mod.rs  request.rs  traits.rs
machi/src/telemetry/: mod.rs
machi/src/tool/: errors.rs  mcp.rs  mod.rs  server.rs  toolset.rs  traits.rs
machi/src/tools/: filesystem.rs  final_answer.rs  fs.rs  (+6 more)
machi/tests/: integration_test.rs
(+85 files in other folders)
