[package]
name = "machi-bot"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Machi bot - A personal AI assistant with multi-channel support"

[features]
default = ["telegram"]
telegram = ["dep:teloxide"]

[dependencies]
# Core
machi = { workspace = true, features = ["toolkit"] }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }
dirs-next.workspace = true
clap.workspace = true

# Async runtime
tokio = { workspace = true, features = ["full", "sync", "signal"] }

# HTTP client for transcription
reqwest = { workspace = true, features = ["multipart", "json"] }

# Regex for text processing
regex = "1"

# Optional: Telegram support
teloxide = { workspace = true, optional = true }

[[bin]]
name = "machi"
path = "src/main.rs"

[lints]
workspace = true
