[package]
name = "machi-cli"
version.workspace = true
edition.workspace = true
description = "CLI tools for Machi AI Agent Framework"
license.workspace = true
readme = "../README.md"
repository.workspace = true
keywords = ["agent", "ai", "cli", "chatbot"]
categories = ["command-line-utilities", "asynchronous"]

[dependencies]
futures.workspace = true
machi = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing.workspace = true

[lints]
workspace = true
