[package]
name = "machi-integrations"
version.workspace = true
edition.workspace = true
description = "Third-party platform integrations for Machi AI Agent Framework"
license.workspace = true
readme = "../README.md"
repository.workspace = true
keywords = ["agent", "ai", "discord", "integrations"]
categories = ["asynchronous", "web-programming"]

[dependencies]
machi = { workspace = true }
serenity = { workspace = true, optional = true }
tokio.workspace = true

[features]
default = []
discord = ["dep:serenity"]

[lints]
workspace = true
